# magie

./: Cargo.toml  README.md
cmd/: Cargo.toml
cmd/src/: main.rs
src/: image.rs  lib.rs
src/codec/: mod.rs
src/codec/bitmap/: decoder.rs  mod.rs
src/color_space/: luma.rs  mod.rs  rgb.rs  rgba.rs  ycbcr.rs
