[package]
name = "magie"
version = "0.1.0"
authors = ["Alexandre Negrel <negrel.dev@protonmail.com>"]
edition = "2018"
license-file = "../LICENSE"
description = "A magical tool to manipulate images."
keywords = ["image", "jpeg", "jfif", "png", "wepb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.libmagie]
path = ".."
version = "0.1.0"

[dependencies]
